Fix z-index in socialbuttons in footer when activating the navmenu

--- a/src/app/components/footer/page.module.scss
+++ b/src/app/components/footer/page.module.scss
@@ -8,7 +8,7 @@
     position: relative;
     bottom: 0;
     height: 250px;
-    padding-top: 20px;
+    padding-top: 20px;  
 }
 
 
@@ -118,7 +118,7 @@
     position: relative;
     overflow: hidden;
     border: 3px solid rgba(0, 0, 0, 0);
-    z-index: 10;
+    z-index: 1;
     color: white;
 }
 
